quiche-csbindgen.g.cs


        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_in_early_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_in_early_data(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_readable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_readable(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_draining", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_draining(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_peer_streams_left_bidi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong quiche_conn_peer_streams_left_bidi(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_peer_streams_left_uni", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong quiche_conn_peer_streams_left_uni(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_closed", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_closed(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_timed_out", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_timed_out(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_peer_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_peer_error(quiche_conn* conn, bool* is_app, ulong* error_code, byte** reason, nuint* reason_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_local_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_local_error(quiche_conn* conn, bool* is_app, ulong* error_code, byte** reason, nuint* reason_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_stream_iter_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_stream_iter_next(quiche_stream_iter* iter, ulong* stream_id);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_stream_iter_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_stream_iter_free(quiche_stream_iter* iter);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stats", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_stats(quiche_conn* conn, quiche_stats* @out);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_peer_transport_params", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_peer_transport_params(quiche_conn* conn, quiche_transport_params* @out);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_path_stats", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_path_stats(quiche_conn* conn, nuint idx, quiche_path_stats* @out);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_server", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_server(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_dgram_max_writable_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_max_writable_len(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_dgram_recv_front_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_recv_front_len(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_dgram_recv_queue_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_recv_queue_len(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_dgram_recv_queue_byte_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_recv_queue_byte_size(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_dgram_send_queue_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_send_queue_len(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_dgram_send_queue_byte_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_send_queue_byte_size(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_dgram_recv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_recv(quiche_conn* conn, byte* buf, nuint buf_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_dgram_send", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_send(quiche_conn* conn, byte* buf, nuint buf_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_dgram_purge_outgoing", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_dgram_purge_outgoing(quiche_conn* conn, delegate* unmanaged[Cdecl]<byte*, nuint, bool> f);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_dgram_send_queue_full", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_dgram_send_queue_full(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_dgram_recv_queue_full", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_dgram_recv_queue_full(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_send_ack_eliciting", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_send_ack_eliciting(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_send_ack_eliciting_on_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_send_ack_eliciting_on_path(quiche_conn* conn, sockaddr* local, uint local_len, sockaddr* peer, uint peer_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_retired_scid_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_retired_scid_next(quiche_conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_retired_scids", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_retired_scids(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_available_dcids", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_available_dcids(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_scids_left", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_scids_left(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_active_scids", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_active_scids(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_new_scid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_new_scid(quiche_conn* conn, byte* scid, nuint scid_len, byte* reset_token, [MarshalAs(UnmanagedType.U1)] bool retire_if_needed, ulong* scid_seq);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_probe_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_probe_path(quiche_conn* conn, sockaddr* local, uint local_len, sockaddr* peer, uint peer_len, ulong* seq);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_migrate_source", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_migrate_source(quiche_conn* conn, sockaddr* local, uint local_len, ulong* seq);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_migrate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_migrate(quiche_conn* conn, sockaddr* local, uint local_len, sockaddr* peer, uint peer_len, ulong* seq);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_path_event_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern quiche_path_event* quiche_conn_path_event_next(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_path_event_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_path_event_type(quiche_path_event* ev);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_path_event_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_new(quiche_path_event* ev, sockaddr_storage* local, uint* local_len, sockaddr_storage* peer, uint* peer_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_path_event_validated", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_validated(quiche_path_event* ev, sockaddr_storage* local, uint* local_len, sockaddr_storage* peer, uint* peer_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_path_event_failed_validation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_failed_validation(quiche_path_event* ev, sockaddr_storage* local, uint* local_len, sockaddr_storage* peer, uint* peer_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_path_event_closed", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_closed(quiche_path_event* ev, sockaddr_storage* local, uint* local_len, sockaddr_storage* peer, uint* peer_len);
